plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.5'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'project'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'ognl:ognl:3.3.4'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	//implementation 'io.lettuce.core:lettuce-core:6.3.1'

	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	//runtimeOnly 'com.h2database:h2'
	implementation 'mysql:mysql-connector-java:8.0.33'
	implementation 'com.azure:azure-storage-blob:12.19.0'
	implementation 'com.azure.spring:azure-spring-boot-starter:4.0.0'
	implementation 'com.azure.spring:azure-spring-boot-starter-storage:4.0.0'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
//	implementation 'io.jsonwebtoken:jjwt:0.9.1'
	implementation 'org.mapstruct:mapstruct:1.4.1.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.1.Final'
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
	implementation files('opencv_java/opencv-4100.jar')
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.3'
}

tasks.named('test') {
	useJUnitPlatform()
}
